  * osfunc: StartProcess_cp: now supports WaitForProcessEnding also for [L/M]
  * Winbatch now supports WaitForProcessEnding also for [L/M]
  * new string function which(<command in path>) : string (command with path) [W/L/M]
  * new stringlist function replaceOpsiConstants(<list>) : <list>
  * new string function replaceOpsiConstants(<string>) : <string>

-- Detlef Oertel <d.oertel@uib.de>  Fri, 27 Dec 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.2) experimental; urgency=low

  * osProcessux: getCommandResult: give always the first string ; fixes a getmyip Problem

-- Detlef Oertel <d.oertel@uib.de>  Tue, 19 Nov 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.3.1) experimental; urgency=low

  * update function listFiles: including switch for disabling redirections under 64bit-Windows

-- Jan Werner <j.werner@uib.de>  Fri, 15 Nov 2019:13:43:00 +0200

opsi-winst/opsi-script (4.12.3.0) experimental; urgency=low

  * update oswebservice with gzip support (Jan Werner)
  * new StringList function listFiles (Jan Werner)
  * osbatchgui: log on setWindowstate
  * oswebservice: move logging to log_prog
  * osparser info to macos version at log start
  * osparser: Linux: GetIpByName: now uses 'getent hosts'
  * new boolean function: runningWithGui (osparser,osfunc) (at win+Mac always true)
  * macos: osbatchgui: temporary disable setWindowState

-- Detlef Oertel <d.oertel@uib.de>  Wed, 23 Oct 2019:15:00:00 +0200


opsi-winst/opsi-script (4.12.2.3) experimental; urgency=low

  * feature/macos integrated
  * new library uib_state_and_condition:
      Collection of functions that gives info about system states that are relevant for product installations
  * new library uib_state_and_condition:
      Collection of functions that helps to install driver
  * osparser: differences between %CurrentProfileDir% and %UserProfileDir% fixes: #4118
  * osparser: doAktionen: replace constants for every primary section line to avoid
     replacment in secondary sections
